# ParallelBFS

./: .gitignore  README.md  meson.build
.github/workflows/: c.yml
bench/: bench.py  fetch.py
include/: bfs.h  bitmap.h  coo.h  csr.h  frontier.h  queue.h  types.h
src/: bfs.c  bfs_omp.c  bitmap.c  coo.c  csr.c  frontier.c  main.c  meson.build  queue.c
